@@ -2,7 +2,7 @@ package hello;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import hello.model.Customer;
 import hello.model.Quote;
@@ -14,8 +14,8 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.ApplicationContext;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.web.client.RestClient;
 import org.springframework.web.client.RestClientException;
-import org.springframework.web.client.RestTemplate;
 
 @SpringBootApplication
 public class Application implements CommandLineRunner {
@@ -42,7 +42,7 @@ public class Application implements CommandLineRunner {
     JdbcTemplate jdbcTemplate;
 
     @Autowired
-    RestTemplate restTemplate;
+    RestClient restClient;
 
     @Override
     public void run(String... args) throws Exception {
@@ -54,10 +54,9 @@ public class Application implements CommandLineRunner {
         jdbcTemplate.execute("CREATE TABLE customers(id SERIAL, first_name VARCHAR(255), last_name VARCHAR(255))");
 
         // Split up the array of whole names into an array of first/last names
-        List<Object[]> splitUpNames = Arrays.asList("John Woo", "Jeff Dean", "Josh Bloch", "Josh Long")
-                .stream()
-                .map(name -> name.split(" "))
-                .collect(Collectors.toList());
+        List<Object[]> splitUpNames = Stream.of("John Woo", "Jeff Dean", "Josh Bloch", "Josh Long")
+                .<Object[]>map(name -> name.split(" "))
+                .toList();
 
         // Use a Java 8 stream to print out each tuple of the list
         splitUpNames.forEach(name -> log.info(String.format("Inserting customer record for %s %s", name[0], name[1])));
@@ -80,7 +79,10 @@ public class Application implements CommandLineRunner {
      */
     private void logRandomQuote() {
         try {
-            Quote quote = restTemplate.getForObject(QUOTE_URL, Quote.class);
+            Quote quote = restClient.get()
+                    .uri(QUOTE_URL)
+                    .retrieve()
+                    .body(Quote.class);
             log.info(String.valueOf(quote));
         } catch (RestClientException e) {
             log.warn("Could not fetch a quote from {}: {}", QUOTE_URL, e.getMessage());
